--- a/src/pages/item/item.html
+++ b/src/pages/item/item.html
@@ -1,6 +1,11 @@
 <ion-header>
     <ion-navbar>
         <ion-title>{{ item }}</ion-title>
+        <ion-buttons right>
+            <button ion-button icon-only (click)="openHelpPage()">
+                <ion-icon style="border: 1px solid grey; border-radius: 50%; padding: 10px 10px 10px 10px" name="md-help"></ion-icon>
+            </button>
+        </ion-buttons>
     </ion-navbar>
 </ion-header>
 
@@ -9,7 +14,6 @@
     <div padding style="border: 1px solid lightgrey">
         <ion-grid class="button-group">
             <ion-row text-center>
-                <!--<h2 style="transform: translateY(15px)">Tools: </h2>-->
                 <ion-col>
                     <button ion-button
                             [ngClass]="{'activated-button': getSelectedCanvasDirective() === canvasDirectives.canvas_line}"
@@ -53,16 +57,6 @@
 
     <div class="row">
         <div class="col">
-            <!--<img class="img-position"-->
-            <!--src="{{getImageSrc()}}"-->
-            <!--[src]="sanitizer.bypassSecurityTrustResourceUrl(getImageSrc())"-->
-            <!--width="{{getCurrentImage().width}}"-->
-            <!--height="{{getCurrentImage().height}}"/>-->
-            <!--<canvas-->
-            <!--class="canvas-position"-->
-            <!--width="{{getCurrentImage().width}}"-->
-            <!--height="{{getCurrentImage().height}}"-->
-            <!--canvas-editor></canvas>-->
             <annotator></annotator>
         </div>
 
