- The app no longer saves empty annotations

--- a/src/pages/item/item.html
+++ b/src/pages/item/item.html
@@ -47,7 +47,7 @@
                             color="dark" block
                             (click)="selectCanvasDirective(canvasDirectives.canvas_polyline)">
                         <p class="button-text">{{"POLYLINE (" + hotkeys.polyline + ")"}}</p>
-                        <ion-icon name="star"></ion-icon>
+                        <ion-icon name="md-trending-up"></ion-icon>
                     </button>
                 </ion-col>
             </ion-row>
